b9522ad1-25cf-4ab2-a072-be98acb1ea26

--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
 		<html>
  <head></head>
  <body id="ir4d">
-  <div class="col" id="id18l">
-   <section class="bdg-sect" id="iy1g4">
-    <h1 class="heading" id="i2755">This is my heading</h1>
+  <div id="id18l" class="col">
+   <section id="iy1g4" class="bdg-sect">
+    <h1 id="i2755" class="heading">This is my heading</h1>
     <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
    </section>
   </div>
