--- a/index.html
+++ b/index.html
@@ -80,16 +80,16 @@
     <h1 id="i2755" class="heading">This is my heading</h1>
     <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
    </section>
-   <nav class="navbar navbar-expand-lg navbar-light border" id="izgq4">
+   <nav id="izgq4" class="navbar navbar-expand-lg navbar-light border">
     <div class="container-fluid">
-     <a href="#" class="navbar-brand" id="ifzfr">Navbar</a>
+     <a href="#" id="ifzfr" class="navbar-brand">Navbar</a>
      <div id="toggle-71171766-c901-43ea-b1e6-5edaff61ed34" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-71171766-c901-43ea-b1e6-5edaff61ed34" aria-controls="collapse-71171766-c901-43ea-b1e6-5edaff61ed34" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler">
       <span class="navbar-toggler-icon"></span>
      </div>
      <div id="collapse-71171766-c901-43ea-b1e6-5edaff61ed34" class="collapse navbar-collapse">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-       <li class="nav-item"><a aria-current="page" href="#" class="nav-link active" id="id0kt">Home</a></li>
-       <li class="nav-item"><a href="#" class="nav-link" id="i6ba5">Link</a></li>
+       <li class="nav-item"><a aria-current="page" href="#" id="id0kt" class="nav-link active">Home</a></li>
+       <li class="nav-item"><a href="#" id="i6ba5" class="nav-link">Link</a></li>
        <li class="nav-item dropdown"><a href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" class="nav-link dropdown-toggle"> Dropdown </a>
         <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
          <li><a href="#" class="dropdown-item">Action</a></li>
@@ -98,7 +98,7 @@
           <hr class="dropdown-divider"></li>
          <li><a href="#" class="dropdown-item">Something else here</a></li>
         </ul></li>
-       <li class="nav-item" id="idn4d"><a href="#" tabindex="-1" aria-disabled="true" class="nav-link disabled">Disabled</a></li>
+       <li id="idn4d" class="nav-item"><a href="#" tabindex="-1" aria-disabled="true" class="nav-link disabled">Disabled</a></li>
       </ul>
       <form method="get" class="d-flex">
        <input type="search" placeholder="Search" aria-label="Search" class="form-control me-2"><button type="submit" class="btn btn-outline-success">Search</button>
