--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 <style type="text/css">
 
-* { box-sizing: border-box; } body {margin: 0;}#id18l{height:100vh;background-color:grey;}#i2755{color:red;}#id0kt{font-size:20px;color:orange;}#idn4d{color:orange;font-size:20px;}#ifzfr{color:orange;}
+* { box-sizing: border-box; } body {margin: 0;}#id18l{height:100vh;background-color:grey;}#i2755{color:red;}#id0kt{font-size:20px;color:orange;}#idn4d{color:orange;font-size:20px;}#ifzfr{color:orange;}#i3idf6{width:18rem;}#ir5nwr{font-size:40px;color:orange;}
 
 </style>
 
@@ -106,6 +106,13 @@
      </div>
     </div>
    </nav>
+   <div class="card" id="i3idf6">
+    <img src="https://images.pexels.com/photos/16284936/pexels-photo-16284936.jpeg?auto=compress&amp;cs=tinysrgb&amp;w=1260&amp;h=750&amp;dpr=2" alt="card-image" class="card-img-top">
+    <div class="card-body">
+     <h5 class="card-title" id="ir5nwr">Card title</h5>
+     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p><a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+   </div>
   </div>
  </body>
 </html>
